# lifetime-macro

./: Cargo.toml  README.md
alias_trie/: Cargo.toml
alias_trie/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs  temp.rs
lifetime_derive/: Cargo.toml
lifetime_derive/src/: lib.rs  ref_nodes.rs
