[package]
name = "lifetime_derive"
version = "0.1.0"
authors = ["ruiqi <smile.ruiqi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "fold", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
lazy_static = "1.4"
regex = "1.3"
itertools = "0.9"
alias_trie = "0.9"